--- a/experiments/workshop_experiments/baselines/small_data/bert/experiment.ipynb
+++ b/experiments/workshop_experiments/baselines/small_data/bert/experiment.ipynb
@@ -8,8 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We load in a BERT model that has not been pretrained on any sort of bias detection, and try to train the model directly on the task of bias classification."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/04/2020 16:44:20 - INFO - pytorch_pretrained_bert.tokenization -   loading vocabulary file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at ./cache/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
+      "386it [00:00, 5581.49it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading in the dataset that we are using in this experiments \n",
     "# typically this dataset is the small set of ground-truth labels\n",
@@ -53,23 +69,140 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "bert_dataloader = dataset.return_dataloader(\n",
-    "    batch_size=params.final_task['training_params']['batch_size']\n",
-    ")"
+    "### Start of Classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bert_experiment = ClassificationExperiment.init_cls_experiment(params)"
+    "from src.utils.classification_utils import run_bootstrapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/04/2020 16:44:22 - INFO - pytorch_pretrained_bert.modeling -   loading archive file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased.tar.gz from cache at /sailhome/rdm/.pytorch_pretrained_bert/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba\n",
+      "03/04/2020 16:44:22 - INFO - pytorch_pretrained_bert.modeling -   extracting archive file /sailhome/rdm/.pytorch_pretrained_bert/9c41111e2de84547a463fd39217199738d1e3deb72d4fec4399e6e241983c6f0.ae3cef932725ca7a30cdcb93fc6e09150a55e2a130ec7af63975a16c153ae2ba to temp dir /tmp/tmp97jouiwf\n",
+      "03/04/2020 16:44:26 - INFO - pytorch_pretrained_bert.modeling -   Model config {\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n",
+      "03/04/2020 16:44:29 - INFO - pytorch_pretrained_bert.modeling -   Weights of BertForSequenceClassification not initialized from pretrained model: ['classifier.weight', 'classifier.bias']\n",
+      "03/04/2020 16:44:29 - INFO - pytorch_pretrained_bert.modeling -   Weights from pretrained model not used in BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.gamma', 'cls.predictions.transform.LayerNorm.beta', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n"
+     ]
+    }
+   ],
+   "source": [
+    "bert_experiment = ClassificationExperiment.init_cls_experiment(params.final_task)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c53a95cd011419a9718cdf6299de941",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Cross Validation Iteration', max=3, style=ProgressStyle(descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='epochs', max=3, style=ProgressStyle(description_width='initia…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='epochs', max=3, style=ProgressStyle(description_width='initia…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='epochs', max=3, style=ProgressStyle(description_width='initia…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "statistics = run_bootstrapping(bert_experiment, dataset, params.final_task, num_bootstrap_iters=3, input_key='pre_ids', label_key='bias_label', threshold=0.42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc': [(0.496808590178025, 0.5813054745707807), 0.5274084437715109],\n",
+       " 'accuracy': [(0.6142857142857143, 0.6918367346938775), 0.653061224489796]}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statistics"
    ]
   },
   {
@@ -80,13 +213,19 @@
    },
    "outputs": [],
    "source": [
-    "stats = bert_experiment.train_model(\n",
+    "# Can also run the following to get the statistics for each epoch - without any bootstrapping\n",
+    "# we can average over each of the epochs; and then get the max \n",
+    "bert_dataloader = dataset.return_dataloader(\n",
+    "    batch_size=params.final_task['training_params']['batch_size']\n",
+    ")\n",
+    "\n",
+    "_, stats = bert_experiment.train_model(\n",
     "    bert_dataloader, \n",
     "    bert_dataloader,\n",
     "    input_key=\"pre_ids\",\n",
     "    label_key=\"bias_label\",\n",
     "    threshold=0.5,\n",
-    "    print_loss_every=1\n",
+    "    print_loss_every=0 #set to anything >0 to actually print \n",
     ")"
    ]
   },
