Attention Experiment Notebooks
Created notebooks and modularized attention distribution reduction, fixed small bug in concatenation code.

--- a/experiments/workshop_experiments/attention/small_data/concatenate_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/concatenate_clark/experiment.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Averaging last 4 attention distributionsusing a GRU \n",
+    "## Concatenating attention distributions 6, 7, and 8 using a GRU \n",
     "\n",
-    "We average together the last 4 attention distributions of the input. Our classification model is an LSTM that reads in the attention distribution for each word sequentially. In general the max sequence lenght is 80 which means that our model will read in 80 data points which are each 80 dimensional. \n",
+    "We concatenate together the 6th, 7th, and 8th attention distributions of the input. Our classification model is an LSTM that reads in the attention distribution for each word sequentially. In general the max sequence lenght is 80 which means that our model will read in 80 data points which are each 80 dimensional. \n",
     "\n",
     "\n",
     "#### Notes\n",
