--- a/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Averaging last 4 attention distributionsusing a GRU \n",
+    "## Averaging attention distributions 6, 7, and 8 using a GRU \n",
     "\n",
-    "We average together the last 4 attention distributions of the input. Our classification model is an LSTM that reads in the attention distribution for each word sequentially. In general the max sequence lenght is 80 which means that our model will read in 80 data points which are each 80 dimensional. \n",
+    "We average together the 6th, 7th, and 8th attention distributions of the input. Our classification model is an LSTM that reads in the attention distribution for each word sequentially. In general the max sequence lenght is 80 which means that our model will read in 80 data points which are each 80 dimensional. \n",
     "\n",
     "\n",
     "#### Notes\n",
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_attention = reduce_attention_dist(attention_scores, params.intermediary_task[\"attention\"][\"reducer\"])\n",
+    "reduced_attention = reduce_attention_dist(attention_scores, \"concat\")#params.intermediary_task[\"attention\"][\"reducer\"])\n",
     "stacked_reduced_attention = torch.stack(reduced_attention).squeeze()\n",
     "dataset.add_data(stacked_reduced_attention, \"attention_dist\")\n",
     "dataset.shuffle_data()\n",
