added snorkel stuff - still need to generate dataset

--- a/experiments/workshop_experiments/weak_labeling_functions/small_data/bert_embeddings/experiment.ipynb
+++ b/experiments/workshop_experiments/weak_labeling_functions/small_data/bert_embeddings/experiment.ipynb
@@ -103,33 +103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.7959,  0.1450,  0.9628,  ..., -0.1308,  0.2551, -0.2878],\n",
-       "        [ 0.1854,  0.5203, -0.2226,  ..., -0.3602, -0.0700, -0.2605],\n",
-       "        [-0.6457, -0.1228,  0.1654,  ..., -0.0505, -0.0284, -0.0362],\n",
-       "        ...,\n",
-       "        [ 0.1320,  0.3698,  0.5461,  ..., -0.2765,  0.3679,  0.0721],\n",
-       "        [-0.1649,  0.6399, -0.0537,  ..., -0.5462,  0.6190, -0.4746],\n",
-       "        [ 0.3754,  0.4671,  0.5092,  ..., -0.1058, -0.2050,  0.3225]])"
+       "torch.Size([324, 768])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bert_embeddings.detach()"
+    "bert_embeddings.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82a3dc042971438cb1224e45f0bcf4ea",
+       "model_id": "5756641d14a3449e804efd0382f53e25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cfc7e0efd5c4d1593d782dad5b549d7",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,6 +187,41 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='epochs', max=200, style=ProgressStyle(description_width='init…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='epochs', max=200, style=ProgressStyle(description_width='init…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -201,12 +230,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc': [(0.888993783993784, 0.9144273640192009), 0.9025345462509803],\n",
+       " 'accuracy': [(0.816656037414966, 0.8526041666666667), 0.8311366213151928]}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "statistics"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
