--- a/experiments/workshop_experiments/weak_labeling_functions/small_data/glove/experiment.ipynb
+++ b/experiments/workshop_experiments/weak_labeling_functions/small_data/glove/experiment.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bc321e081674b8895b2625dd5961da7",
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='epochs', max=200, style=ProgressStyle(description_width='init…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,8 +194,8 @@
     {
      "data": {
       "text/plain": [
-       "{'auc': [(0.9503368677016261, 0.9708432171569927), 0.959598823295552],\n",
-       " 'accuracy': [(0.8969600340136054, 0.9377551020408164), 0.9176587301587302]}"
+       "{'auc': [(0.8379055431696487, 0.9535041551585668), 0.8819723151016193],\n",
+       " 'accuracy': [(0.7860119047619046, 0.8411458333333333), 0.8070436507936507]}"
       ]
      },
      "execution_count": 17,
